sandc/test/fixtures/astRegression/shouldSucceed/productions/nonAssignableExpression/RangeCheckExpression.sand
pub class RangeCheckExpression {
    foo() {
        [
            i() in low() ... high(),
            i() in low() ..= high(),
            i() in low() =.. high(),
            i() in low() =.= high(),
        ]
    }
}