sandc/test/fixtures/astRegression/shouldFail/productions/statement/ForRangeMultipleBindings.sand
pub class ForRangeMultipleBindings {
    foo() {
        for @i, v in low upuntil high {
            
        }
    }
}